[package]
name = "music"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "time"], default-features = false }
anyhow = "1.0.79"


# music
claxon ="0.4.3"

# egui
egui = "0.25.0"
eframe = { version = "0.25.0" }
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }

# flamegraph for generating performance graphs
flame = "0.2.2"

